<resources>
    <string name="app_name">Java and Kotlin educational app</string>
    <string name="image">image</string>
    <string name="easy">Easy</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">Hard</string>
    <string name="train_your_brain">Train your Brain</string>
    <string name="_3_4_x_6">(3 + 4) x 6</string>
    <string name="_10">10</string>
    <string name="_29">29</string>
    <string name="your_score">Your score\n8/10</string>
    <string name="home">home</string>
    <string name="_5_x_5_10">(5 x 5) + 10</string>
    <string name="_20">20</string>
    <string name="your_answer">Your Answer:</string>
    <string name="correct_answer">Correct Answer:</string>
</resources>